Refatoring project add MVC design pattern

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,16 @@
               </archive>
           </configuration>
         </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.3</version>
+        <configuration>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
     </plugins>
     </build>
     <properties>
